test/extern/ferguson/c-array/c-array-export-proc-error.good
c-array-export-proc-error.chpl:1: error: extern procedures should not return c_array
c-array-export-proc-error.chpl:2: error: exported procedures should not return c_array
